@@ -4,10 +4,9 @@ module LayoutIn4 where
 
 --In this Example: rename 'ioFun' to  'io'
 
-main = io    "hello" where io    s = do let  k = reverse s
- --There is a comment
-                                        s <- getLine
-                                        let  q = (k ++ s)
-                                        putStr q
-                                        putStr "foo"
-
+main = io "hello" where io s= do  let  k = reverse s
+--There is a comment
+                                  s <- getLine
+                                  let  q = (k ++ s)
+                                  putStr q
+                                  putStr "foo"
