@@ -1,3 +1,8 @@
+2013-09-15  alanz  <alanz@alanz-laptop>
+
+	* src/Language/Haskell/Refact/Utils/TypeUtils.hs
+	(adjustLayoutAfterRename): Adjust layout in a do expression after renaming
+
 	* Re-align tokens when renaming the condition of a case statement
 	to have a different length
 	* When refactoring a CPP pre-processed file, read the preprocessor
